Closed
Bug 1923729
Opened 10 months ago
Closed 10 months ago
Crash when logging encoding VideoFrame with unknown format
Categories
(Core :: Audio/Video: Web Codecs, defect, P1)
Core
Audio/Video: Web Codecs
Tracking
()
VERIFIED
FIXED
133 Branch
Tracking | Status | |
---|---|---|
firefox133 | --- | verified |
People
(Reporter: chunmin, Assigned: chunmin)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
Step to reproduce
- Launch Firefox with
WebCodecs:5
enabled, e.g.,MOZ_LOG="WebCodecs:5" ./mach run
- Go to https://chunminchang.github.io/playground/webcodecs/encode-from-video.html
- Click "Start Encoding"
See the details mentioned in Bug 1923537 comment #1
Assignee | ||
Updated•10 months ago
|
Assignee | ||
Comment 1•10 months ago
|
||
Assignee | ||
Comment 2•10 months ago
|
||
Depends on D225115
Pushed by cchang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3198c976898c
Fix VideoFrame::ToString when format is unknown r=media-playback-reviewers,padenot
https://hg.mozilla.org/integration/autoland/rev/3976d60ba355
Distinguish logs in ctors r=media-playback-reviewers,padenot
Comment 4•10 months ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/3198c976898c
https://hg.mozilla.org/mozilla-central/rev/3976d60ba355
Status: NEW → RESOLVED
Closed: 10 months ago
status-firefox133:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
Updated•10 months ago
|
Flags: qe-verify+
Comment 5•9 months ago
|
||
I could not reproduce the issue on Ubuntu 24.04/Win11 using Firefox build 133.0a1(2024100904637) in order to confirm the fix.
C.M.Chang, can you please confirm issue is not reproducing on your side using latest Nightly and beta. Thank you.
Flags: needinfo?(cchang)
You need to log in
before you can comment on or make changes to this bug.
Description
•