Bug 1923729 - Distinguish logs in ctors r=media-playback-reviewers,padenot

Depends on D225115

Differential Revision: https://phabricator.services.mozilla.com/D225116